@@ -20,6 +20,7 @@ Version 1.4.21 - SVN
     diagnosing and testing.)
   - Fixed minor vulnerability in Mail Fetch plugin [CVE-2010-1637/TEHTRI-SA-2010-009]
   - Now properly quote personal part of encoded addresses when replying.
+  - Now fill in default subject when forwarding as attachment (#2936541).
 
 Version 1.4.20 - 06 Mar 2010
 ---------------------------
